--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>scrz</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700&amp;subset=latin,latin-ext">
-</head>
-<body class="inner">
-  <header>
-    <section id="logo">
-      <span class="scrz">scrz<em>v0.0.1</em></span>
-    </section>
-    <nav class="clearfix">
-      <a href="/">Home</a>
-      <a href="/guide.html">Guide</a>
-      <a href="/screenshots.html">Screenshots</a>
-      <a href="/contact.html" class="active">Contact</a>
-      <a href="/faq.html">FAQ</a>
-    </nav>
-  </header>
-  <section id="content">
-    <div id="faq">
-      <p>
-      Hi. My name is <b>Tomas Carnecky</b>.
-      I respond best to <a href="mailto:tomas.carnecky@gmail.com">emails</a>,
-      on Twitter I'm known as <a href="https://twitter.com/wereHamster">@wereHamster</a>.
-      </p>
-    </div>
-  </section>
-</body>
-</html>
+---
+layout: default
+title: scrz
+---
+
+<div id="faq">
+    <p>
+    Hi. My name is <b>Tomas Carnecky</b>.
+    I respond best to <a href="mailto:tomas.carnecky@gmail.com">emails</a>,
+    on Twitter I'm known as <a href="https://twitter.com/wereHamster">@wereHamster</a>.
+    </p>
+</div>
